--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-        <link rel="stylesheet" href="style/main-style.css">
+    <link rel="stylesheet" href="style/main-style.css">
     <link rel="shortcut icon" href="img/ico/tenis-ico.ico" type="image/x-icon">
     <title>Super Padel Bros Tour 2</title>
 </head>
+
 <body>
     <div class="container" id="principal">
         <!-- Cabecera PC -->
-        <header class="d-flex justify-content-center mt-3 py-3 pb-1 w-100 fixed-top top">
+        <header class="d-flex justify-content-center py-5 pb-1 w-100 fixed-top top">
             <ul class="nav nav-pills gap-3" id="menu"></ul>
         </header>
         <!-- Cabecera Movil -->
@@ -34,8 +36,8 @@
     <section class="container">
         <div class="mt-3">
             <h3 class="text-center">Clasificación</h3>
-            
-            <table class="table table-hover">
+            <div id="spinnerContainer" class="d-flex justify-content-center align-items-center py-3"></div>
+            <table class="table table-hover" id="clasificacion">
                 <thead>
                     <tr>
                         <th scope="col" class="col col-1 col-lg-1 col-md-1 col-sm-1">Posición</th>
@@ -46,43 +48,43 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">1</th>
                         <td id="pareja0" class="align-middle"></td>
                         <td id="ganados0" class="align-middle"></td>
                         <td id="puntos0" class="align-middle"></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">2</th>
                         <td id="pareja1" class="align-middle"></td>
                         <td id="ganados1" class="align-middle"></td>
                         <td id="puntos1" class="align-middle"></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">3</th>
                         <td id="pareja2" class="align-middle"></td>
                         <td id="ganados2" class="align-middle"></td>
                         <td id="puntos2" class="align-middle"></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">4</th>
                         <td id="pareja3" class="align-middle"></td>
                         <td id="ganados3" class="align-middle"></td>
                         <td id="puntos3" class="align-middle"></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">5</th>
                         <td id="pareja4" class="align-middle"></td>
                         <td id="ganados4" class="align-middle"></td>
                         <td id="puntos4" class="align-middle"></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">6</th>
                         <td id="pareja5" class="align-middle"></td>
                         <td id="ganados5" class="align-middle"></td>
                         <td id="puntos5" class="align-middle"></td>
                     </tr>
                     <tr>
-                        <th scope="row" class="align-middle"></th>
+                        <th scope="row" class="align-middle">7</th>
                         <td id="pareja6" class="align-middle"></td>
                         <td id="ganados6" class="align-middle"></td>
                         <td id="puntos6" class="align-middle"></td>
@@ -91,9 +93,18 @@
             </table>
         </div>
     </section>
+    <div class="container mt-5">
+        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <div class="col-md-4 d-flex align-items-center">
+                <p class="mb-3 mb-md-0">© 2023 SPBT2</p>
+            </div>
+        </footer>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
+    <script src="js/componentes.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 </html>
