--- a/index.html
+++ b/index.html
@@ -47,43 +47,43 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">1</th>
                         <td id="pareja0" class="align-middle"></td>
                         <td id="ganados0" class="align-middle"></td>
                         <td id="puntos0" class="align-middle"></td>
                     </tr>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">2</th>
                         <td id="pareja1" class="align-middle"></td>
                         <td id="ganados1" class="align-middle"></td>
                         <td id="puntos1" class="align-middle"></td>
                     </tr>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">3</th>
                         <td id="pareja2" class="align-middle"></td>
                         <td id="ganados2" class="align-middle"></td>
                         <td id="puntos2" class="align-middle"></td>
                     </tr>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">4</th>
                         <td id="pareja3" class="align-middle"></td>
                         <td id="ganados3" class="align-middle"></td>
                         <td id="puntos3" class="align-middle"></td>
                     </tr>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">5</th>
                         <td id="pareja4" class="align-middle"></td>
                         <td id="ganados4" class="align-middle"></td>
                         <td id="puntos4" class="align-middle"></td>
                     </tr>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">6</th>
                         <td id="pareja5" class="align-middle"></td>
                         <td id="ganados5" class="align-middle"></td>
                         <td id="puntos5" class="align-middle"></td>
                     </tr>
-                    <tr>
+                    <tr class="indice">
                         <th scope="row" class="align-middle">7</th>
                         <td id="pareja6" class="align-middle"></td>
                         <td id="ganados6" class="align-middle"></td>
