--- a/index.html
+++ b/index.html
@@ -13,30 +13,27 @@
 </head>
 
 <body>
-    <div class="container" id="principal">
-        <!-- Cabecera PC -->
-        <header class="d-flex justify-content-center py-5 pb-1 w-100 fixed-top top">
-            <ul class="nav nav-pills gap-3" id="menu"></ul>
-        </header>
-        <!-- Cabecera Movil -->
-    </div>
-    <!-- Hero -->
+    <!-- Cabecera PC -->
     <section class="container" id="hero">
-        <div class="text-center border-bottom">
-            <h1 class="display-4 fw-bold">Super Padel Bros Tour <span class="signature">2</span></h1>
-            <div class="col-lg-6 mx-auto">
-                <p class="lead mb-4" id="estado"></p>
-            </div>
-            <div class="container px-5">
-                <img src="img/padel.png" class="img-fluid" width="40%" alt="padel" id="hero-img">
+        <div class="text-center border-bottom my-3">
+            <div class="row">
+                <div class="col col-5">
+                    <h1 class="display-4 fw-bold">Super Padel Bros Tour <span class="signature">2</span></h1>
+                    <p class="lead mb-4" id="estado"></p>
+                </div>
+                <div class="col col-7 d-flex justify-content-center align-items-center">
+                    <header class="d-flex justify-content-center">
+                        <ul class="nav nav-pills gap-3" id="menu"></ul>
+                    </header>
+                </div>
             </div>
         </div>
     </section>
     <!-- Clasificación -->
-    <section class="container">
-        <div class="mt-3">
+    <section class="container pb-5">
+        <div class="mt-5">
             <h3 class="text-center">Clasificación</h3>
-            <div id="spinnerContainer" class="d-flex justify-content-center align-items-center py-3"></div>
+            <div id="spinnerContainer" class="d-flex justify-content-center align-items-center pb-3"></div>
             <table class="table table-hover" id="clasificacion">
                 <thead>
                     <tr>
@@ -93,7 +90,7 @@
             </table>
         </div>
     </section>
-    <div class="container mt-5">
+    <div class="container mt-5 pt-5">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
                 <p class="mb-3 mb-md-0">© 2023 SPBT2</p>
