--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,17 +10,16 @@
     <link rel="shortcut icon" href="img/ico/tenis-ico.ico" type="image/x-icon">
     <title>Super Padel Bros Tour 2</title>
 </head>
-
 <body>
-    <!-- Cabecera PC -->
     <section class="container" id="hero">
-        <div class="text-center border-bottom my-3">
+        <!-- Cabecera PC -->
+        <div class="text-center border-bottom my-3" id="cabeceraPC">
             <div class="row">
-                <div class="col col-5">
+                <div class="col col-5" id="titulo">
                     <h1 class="display-4 fw-bold">Super Padel Bros Tour <span class="signature">2</span></h1>
                     <p class="lead mb-4" id="estado"></p>
                 </div>
-                <div class="col col-7 d-flex justify-content-center align-items-center">
+                <div class="col col-7 d-flex justify-content-center align-items-center" id="cajaMenu">
                     <header class="d-flex justify-content-center">
                         <ul class="nav nav-pills gap-3" id="menu"></ul>
                     </header>
@@ -90,10 +88,10 @@
             </table>
         </div>
     </section>
-    <div class="container mt-5 pt-5">
+    <div class="container mt-5">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
             <div class="col-md-4 d-flex align-items-center">
-                <p class="mb-3 mb-md-0">© 2023 SPBT2</p>
+                <p class="mb-3 mb-md-0">©2023 SPBT2</p>
             </div>
         </footer>
     </div>
@@ -103,5 +101,4 @@
     <script src="js/componentes.js"></script>
     <script src="js/main.js"></script>
 </body>
-
 </html>
