--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
             <div class="row">
                 <div class="col col-5" id="titulo">
                     <h1 class="display-4 fw-bold">Super Padel Bros Tour <span class="signature">2</span></h1>
-                    <p class="lead mb-4" id="estado"></p>
+                    <p class="lead mb-3" id="estado"></p>
+                </div>
+                <div class="col col-3 mb-3" id="menuResponsive" data-bs-toggle="offcanvas" href="#menuLateral" aria-controls="menuLateral">
+                    <img src="img/menu-puntos-vertical.png" id="botonMenuResponsive">
                 </div>
                 <div class="col col-7 d-flex justify-content-center align-items-center" id="cajaMenu">
                     <header class="d-flex justify-content-center">
@@ -27,6 +30,8 @@
             </div>
         </div>
     </section>
+    <!-- Menu lateral -->
+    <div id="getMenu"></div>
     <!-- Clasificación -->
     <section class="container pb-5">
         <div class="mt-5">
@@ -99,6 +104,7 @@
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="js/componentes.js"></script>
+    <script src="js/index.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
