--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <p class="lead mb-3" id="estado"></p>
                 </div>
                 <div class="col col-3 mb-3" id="menuResponsive" data-bs-toggle="offcanvas" href="#menuLateral" aria-controls="menuLateral">
-                    <img src="img/menu-puntos-vertical.png" id="botonMenuResponsive">
+                    <img src="https://res.cloudinary.com/dodq6s1fh/image/upload/v1686249249/SPBT2/menu-puntos-vertical_gemcny.png" id="botonMenuResponsive">
                 </div>
                 <div class="col col-7 d-flex justify-content-center align-items-center" id="cajaMenu">
                     <header class="d-flex justify-content-center">
