--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -8,12 +8,12 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/main-style.css">
     <link rel="shortcut icon" href="../img/ico/tenis-ico.ico" type="image/x-icon">
-    <title>SPBT 2 | Clasificación</title>
+    <title>SPBT 2 | Calendario</title>
 </head>
 <body>
     <section class="container" id="hero">
         <!-- Cabecera PC -->
-        <!-- <div class="text-center border-bottom my-3" id="cabeceraPC">
+        <div class="text-center border-bottom my-3" id="cabeceraPC">
             <div class="row">
                 <div class="col col-5" id="titulo">
                     <h1 class="display-4 fw-bold">Super Padel Bros Tour <span class="signature">2</span></h1>
@@ -28,32 +28,12 @@
                     </header>
                 </div>
             </div>
-        </div> -->
+        </div>
     </section>
     <!-- Menu lateral -->
     <div id="getMenu"></div>
     <!-- Contenido -->
     <section class="container pb-5">
-        <div class="mt-5">
-            <h3 class="text-center">Ranking</h3>
-            <div id="spinnerContainer" class="d-flex justify-content-center align-items-center pb-3"></div>
-            <div class="container mt-3">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col" class="col col-1">#</th>
-                            <th scope="col" class="col col-5">Nombre</th>
-                            <th scope="col" class="col col-2">Puntos</th>
-                            <th scope="col" class="col col-2">Partidos jugados</th>
-                            <th scope="col" class="col col-2">Partidos ganados</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tabla">
-                        <tr>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
     </section>
     <div class="container mt-5">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
