--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,45 +9,49 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../style/main-style.css">
     <link rel="shortcut icon" href="../img/ico/tenis-ico.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../style/calendario.css">
     <title>SPBT 2 | Calendario</title>
 </head>
+
 <body>
     <section class="container" id="hero">
-        <!-- Cabecera PC -->
-        <div class="text-center border-bottom my-3" id="cabeceraPC">
-            <div class="row">
-                <div class="col col-5" id="titulo">
-                    <h1 class="display-4 fw-bold">Super Padel Bros Tour <span class="signature">2</span></h1>
-                    <p class="lead mb-3" id="estado"></p>
-                </div>
-                <div class="col col-3 mb-3" id="menuResponsive" data-bs-toggle="offcanvas" href="#menuLateral" aria-controls="menuLateral">
-                    <img src="https://res.cloudinary.com/dodq6s1fh/image/upload/v1686249249/SPBT2/menu-puntos-vertical_gemcny.png" id="botonMenuResponsive">
-                </div>
-                <div class="col col-7 d-flex justify-content-center align-items-center" id="cajaMenu">
-                    <header class="d-flex justify-content-center">
-                        <ul class="nav nav-pills gap-3" id="menu"></ul>
-                    </header>
-                </div>
-            </div>
-        </div>
+        <div id="spinnerContainer" class="d-flex justify-content-center align-items-center pb-3"></div>
     </section>
     <!-- Menu lateral -->
     <div id="getMenu"></div>
     <!-- Contenido -->
     <section class="container pb-5">
-    </section>
-    <div class="container mt-5">
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <div class="col-md-4 d-flex align-items-center">
-                <p class="mb-3 mb-md-0">©2023 SPBT2</p>
+        <h3 class="text-center my-5">Calendario</h3>
+        <div id="calendario"></div>
+        <!-- <div class="accordion my-3" id="accordionExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                        Jornada 1: Fecha 
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne"
+                    data-bs-parent="#accordionExample">
+                    <div class="accordion-body">
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <div class="row"><h4>PadelScript vs. Edriadna's</h4></div>
+                            <div class="row"><h4>Ahí va mi burst! vs. Los Hermanos Brothers</h4></div>
+                            <div class="row"><h4>Dos cojos muy mancos vs. Doctores y capibaras</h4></div>
+                            <div class="row"><h4>Los agentes Mara</h4></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </footer>
-    </div>
+        </div> -->
+    </section>
+    <div class="container mt-5" id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="../js/componentes.js"></script>
-    <script src="../js/clasificacion.js"></script>
+    <script src="../js/calendario.js"></script>
     <script src="../js/main.js"></script>
 </body>
+
 </html>
