--- a/pages/clasificacion.html
+++ b/pages/clasificacion.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,6 +11,7 @@
     <link rel="shortcut icon" href="../img/ico/tenis-ico.ico" type="image/x-icon">
     <title>SPBT 2 | Clasificación</title>
 </head>
+
 <body>
     <section class="container" id="hero">
         <!-- Cabecera PC -->
@@ -18,26 +20,25 @@
     <div id="getMenu"></div>
     <!-- Contenido -->
     <section class="container pb-5">
-        <div class="mt-5">
-            <h3 class="text-center">Ranking</h3>
-            <div id="spinnerContainer" class="d-flex justify-content-center align-items-center pb-3"></div>
-            <div class="container mt-3">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col" class="col col-1">#</th>
-                            <th scope="col" class="col col-5">Nombre</th>
-                            <th scope="col" class="col col-2">Puntos</th>
-                            <th scope="col" class="col col-2">Partidos jugados</th>
-                            <th scope="col" class="col col-2">Partidos ganados</th>
-                        </tr>
-                    </thead>
-                    <tbody id="tabla">
-                        <tr>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+        <h3 class="text-center my-5">Ranking</h3>
+        <div id="spinnerContainer" class="d-flex justify-content-center align-items-center pb-3"></div>
+        <div class="container mt-3">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th scope="col" class="col col-1">#</th>
+                        <th scope="col" class="col col-5">Nombre</th>
+                        <th scope="col" class="col col-2">Puntos</th>
+                        <th scope="col" class="col col-2">Partidos jugados</th>
+                        <th scope="col" class="col col-2">Partidos ganados</th>
+                    </tr>
+                </thead>
+                <tbody id="tabla">
+                    <tr>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </section>
     <div class="container mt-5" id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
@@ -47,4 +48,5 @@
     <script src="../js/clasificacion.js"></script>
     <script src="../js/main.js"></script>
 </body>
+
 </html>
