--- a/src/pages/nuevoPartido.html
+++ b/src/pages/nuevoPartido.html
@@ -13,22 +13,83 @@
 <body>
     <section class="container" id="hero"></section>
     <div id="getMenu"></div>
-    <section class="container pb-5">
-        <h3 class="text-center my-5">Centro de administración</h3>
+    <section class="container">
+        <h3 class="text-center my-5">Nuevo partido</h3>
         <div id="spinnerContainer" class="d-flex justify-content-center align-items-center pb-3"></div>
-        <div>
-            <form>
-                <button>TEST</button>
+        <div id="formulario" class="d-flex justify-content-center align-items-center flex-column">
+            <form class="w-100" id="partido">
+                <div class="row mb-3">
+                    <div class="col col-6"></div>
+                    <div class="col col-2">Set 1</div>
+                    <div class="col col-2">Set 2</div>
+                    <div class="col col-2">Set 3</div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col col-6">
+                        <div class="row">
+                            <div class="col col-3">
+                                Pareja ganadora
+                            </div>
+                            <div class="col col-7">
+                                <select name="" id="" class="parejas">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-2">
+                        <select name="" id="" class="puntuaciones">
+                        </select>
+                    </div>
+                    <div class="col col-2">
+                        <select name="" id="" class="puntuaciones">
+                        </select>
+                    </div>
+                    <div class="col col-2">
+                        <select name="" id="" class="puntuaciones">
+                        </select>
+                    </div>
+                </div>
+                <div class="row mb-3">
+                    <div class="col col-6">
+                        <div class="row">
+                            <div class="col col-3">
+                                Pareja perdedora
+                            </div>
+                            <div class="col col-7">
+                                <select name="" id="" class="parejas">
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col col-2">
+                        <select name="" id="" class="puntuaciones">
+                        </select>
+                    </div>
+                    <div class="col col-2">
+                        <select name="" id="" class="puntuaciones">
+                        </select>
+                    </div>
+                    <div class="col col-2">
+                        <select name="" id="" class="puntuaciones">
+                        </select>
+                    </div>
+                </div>
+                <div class="d-flex justify-content-center">
+                    <a href="#" class="btn mt-5">Guardar</a>
+                </div>
             </form>
         </div>
-        <a href="/admin">Volver</a>
     </section>
-    <div class="container mt-5" id="footer"></div>
+    <section class="container">
+        <hr>
+        <a href="/admin" class="btn mt-5">Volver</a>
+    </section>
+    <div class="container" id="footer"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
     <script src="/js/componentes"></script>
     <script src="/js/main"></script>
-    <script src="/js/admin"></script>
+    <script src="/js/formulario"></script>
 </body>
 </html>
